syntax = "proto3";

package recordprocessor;

import "github.com/brotherlogic/recordcollection/proto/recordcollection.proto";

message Scores {
  repeated RecordScore scores = 1;
}

message Config {
  int64 last_run_time = 1;
}

message RecordScore {
  int32 instance_id = 1;
  int32 rating = 2;
  recordcollection.ReleaseMetadata.Category category = 3;
  int64 score_time = 4;
}

message GetScoreRequest {
  int32 instance_id = 1;
}

message GetScoreResponse {
  repeated RecordScore scores = 1;
}

service ScoreService {
  rpc GetScore(GetScoreRequest) returns (GetScoreResponse) {};
}
